--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dynamic-host-federation",
   "version": "1.0.1",
   "description": "Dynamic host federation loads the module when the host doesn't know the remote hosts at the time of webpack build",
-  "main": "index.js",
+  "main": "./dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,13 @@
     "url": "https://github.com/AlokGJ/dynamic-host-federation/issues"
   },
   "homepage": "https://github.com/AlokGJ/dynamic-host-federation#readme",
-  "peerDependencies": {
+  "devDependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.34.0",
+    "webpack-cli": "^4.6.0"
   }
 }
