--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   },
   "homepage": "https://github.com/AlokGJ/dynamic-host-federation#readme",
   "devDependencies": {
-    "react": "^16.14.0",
     "@babel/core": "^7.13.15",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "react": "^16.14.0",
     "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "react-dom": "^17.0.2"
   }
 }
