--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-host-federation",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "Dynamic host federation loads the module when the host doesn't know the remote hosts at the time of webpack build",
   "main": "./dist/main.js",
   "scripts": {
@@ -27,9 +27,7 @@
     "react": "^16.14.0",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "react-dom": "^17.0.2"
+    "webpack-dev-server": "^3.11.2",
+    "react-dom": "^16.14.0"
   }
 }
